# AutoFaceMonker

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/autofacemonker/: __init__.py  _cli.py  _register.py
src/autofacemonker/data/: template.ply
tests/: conftest.py  test_autofacemonker.py  test_import.py  test_procrustes.py
