[project]
name = "autofacemonker"
version = "0.1.0"
description = "Automatic 3D facial template registration via MVMP + MeshMonk"
requires-python = ">=3.11"
dependencies = [
    "embreex>=4.4.0",
    "meshmonk[io]>=0.3.0",
    "mvmp>=1.3.0",
    "numpy",
    "trimesh",
]

[project.scripts]
autofacemonker = "autofacemonker._cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autofacemonker = ["data/*.ply"]
