[project]
name = "autofacemonker"
version = "0.1.7"
description = "Automatic 3D facial template registration via MVMP + MeshMonk"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "gfacchi-dev" }]
requires-python = ">=3.11,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "embreex>=4.4.0",
    "meshmonk[io]>=0.3.0",
    "mvmp>=1.4.2",
    "numpy>=1.26.0,<3.0",
    "trimesh>=4.0",
]

[project.optional-dependencies]
fast = ["pyopengl-accelerate"]

[project.scripts]
autofacemonker = "autofacemonker._cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autofacemonker = ["data/*.ply"]
